[package]
name = "rustchat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[lib]
name = "librustchat"
path = "src/lib/lib.rs"

[dependencies]
chrono = "0.4.19"
rusqlite = "*"
sha3 = "0.9.1"
serde = "*"